--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>RestAssuredPostGet</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.0.4</version>
+        </dependency>
     <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
@@ -41,6 +46,29 @@
             <version>5.3.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-rest-assured</artifactId>
+            <version>2.25.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>4.0.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.17.0</version> <!-- Версія може бути оновленою -->
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
 <plugins>
@@ -49,23 +77,39 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.2</version>
         <configuration>
+            <suiteXmlFiles>
+                <suiteXmlFile>src/test/java/resources/testNg.xml</suiteXmlFile>
+            </suiteXmlFiles>
+            <includes><include>**tests/**</include></includes>
+            <parallel>methods</parallel>
+            <useUnlimitedThreads>true</useUnlimitedThreads>
             <systemPropertyVariables>
-                <threadCount>${threadCount}</threadCount>
-                <browser>${browser}</browser>
+                <threads>6</threads>
             </systemPropertyVariables>
         </configuration>
     </plugin>
     <plugin>
         <groupId>io.qameta.allure</groupId>
         <artifactId>allure-maven</artifactId>
-        <version>2.8</version>
+        <version>2.10.0</version>
         <configuration>
-            <resultsDirectory>${project.build.directory}</resultsDirectory>
+            <resultsDirectory>${project.basedir}/allure-results</resultsDirectory>
+            <reportDirectory>${project.build.directory}/allure-report</reportDirectory>
+        </configuration>
+    </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
         </configuration>
     </plugin>
 </plugins>
         </build>
     <properties>
+        <aspectj.version>1.9.20.1</aspectj.version>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
